[tool.poetry]
name = "cyber-signature"
version = "0.1.0"
description = ""
authors = ["Cristian Triana <crisdevelop4@gmail.com>"]
readme = "README.md"
packages = [{include = "cyber_signature"}]

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
