[tool.poetry]
name = "cyber-signature"
version = "0.1.0"
description = ""
authors = ["Cristian Triana <crisdevelop4@gmail.com>"]
readme = "README.md"
packages = [{include = "cyber_signature"}]

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^3.9.0"
cryptography = "^41.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"

[tool.ruff]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
