[tool.poetry]
name = "cyber-signature"
version = "0.1.4"
description = ""
authors = [
    "Cristian Triana <crisdevelop4@gmail.com>",
    "Juan Bernardo Benavides Rubio <jbbenavidesr@unal.edu.co>"
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pypdf = "^3.9.0"
reportlab = "^4.0.4"
cryptography = "^41.0.1"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
cyber-signature = "cyber_signature.app.cli.app:app"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"

[tool.ruff]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
